
classDiagram
    class User {
        Long id
        String username
        String password
        Set<Role> roles
    }

    class Role {
        Long id
        String name
    }

    class Product {
        Long id
        String name
        String description
        Double price
        Integer stockQuantity
    }

    User "1" -- "*" Role : has
    User "1" -- "*" Product : creates
